RESOLVED FIXED 152101
Modern IDB: storage/indexeddb/objectstore-basics.html fails
https://bugs.webkit.org/show_bug.cgi?id=152101
Summary Modern IDB: storage/indexeddb/objectstore-basics.html fails
Brady Eidson
Reported 2015-12-09 16:58:00 PST
Modern IDB: storage/indexeddb/objectstore-basics.html fails openKeyCursor has been removed, and many error messages can be more specific.
Attachments
Patch v1 (28.11 KB, patch)
2015-12-09 17:06 PST, Brady Eidson
achristensen: review+
buildbot: commit-queue-
Archive of layout-test-results from ews104 for mac-yosemite-wk2 (808.74 KB, application/zip)
2015-12-09 17:57 PST, Build Bot
no flags
Patch for landing (32.86 KB, patch)
2015-12-09 22:22 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2015-12-09 17:06:33 PST
Created attachment 267057 [details] Patch v1
Build Bot
Comment 2 2015-12-09 17:57:06 PST
Comment on attachment 267057 [details] Patch v1 Attachment 267057 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/538981 New failing tests: storage/indexeddb/mozilla/key-requirements-inline-and-passed.html storage/indexeddb/mozilla/key-requirements-put-null-key.html storage/indexeddb/mozilla/bad-keypath.html storage/indexeddb/mozilla/key-requirements-put-no-key.html
Build Bot
Comment 3 2015-12-09 17:57:09 PST
Created attachment 267059 [details] Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Brady Eidson
Comment 4 2015-12-09 20:34:41 PST
Should've figured I'd need to update Legacy results. I'll also try Darin's suggestion when adding to the patch - kinda an obvious one!
Brady Eidson
Comment 5 2015-12-09 20:42:53 PST
(In reply to comment #4) > Should've figured I'd need to update Legacy results. > > I'll also try Darin's suggestion when adding to the patch - kinda an obvious > one! "Darin's suggestion" was on another bugzilla. Disregard here.
Brady Eidson
Comment 6 2015-12-09 22:22:39 PST
Created attachment 267071 [details] Patch for landing
WebKit Commit Bot
Comment 7 2015-12-09 23:09:56 PST
Comment on attachment 267071 [details] Patch for landing Clearing flags on attachment: 267071 Committed r193892: <http://trac.webkit.org/changeset/193892>
Note You need to log in before you can comment on or make changes to this bug.