Modern IDB: storage/indexeddb/objectstore-basics.html fails. https://bugs.webkit.org/show_bug.cgi?id=152101

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (Multiple tests updated to the new error messaging cover it).

* Modules/indexeddb/client/IDBObjectStoreImpl.cpp:
(WebCore::IDBClient::IDBObjectStore::putOrAdd): Add plenty of detailed error messaging.

LayoutTests:

* platform/mac-wk1/TestExpectations:
* platform/wk2/storage/indexeddb/mozilla/bad-keypath-expected.txt: Copied from LayoutTests/storage/indexeddb/mozilla/bad-keypath-expected.txt.
* platform/wk2/storage/indexeddb/mozilla/key-requirements-inline-and-passed-expected.txt: Copied from LayoutTests/storage/indexeddb/mozilla/key-requirements-inline-and-passed-expected.txt.
* platform/wk2/storage/indexeddb/mozilla/key-requirements-put-no-key-expected.txt: Copied from LayoutTests/storage/indexeddb/mozilla/key-requirements-put-no-key-expected.txt.
* platform/wk2/storage/indexeddb/mozilla/key-requirements-put-null-key-expected.txt: Copied from LayoutTests/storage/indexeddb/mozilla/key-requirements-put-null-key-expected.txt.
* storage/indexeddb/invalid-keys-expected.txt:
* storage/indexeddb/key-type-binary-expected.txt:
* storage/indexeddb/keypath-edges-expected.txt:
* storage/indexeddb/mozilla/bad-keypath-expected.txt:
* storage/indexeddb/mozilla/key-requirements-inline-and-passed-expected.txt:
* storage/indexeddb/mozilla/key-requirements-put-no-key-expected.txt:
* storage/indexeddb/mozilla/key-requirements-put-null-key-expected.txt:
* storage/indexeddb/objectstore-basics-expected.txt:


Canonical link: https://commits.webkit.org/170246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193892 268f45cc-cd09-0410-ab3c-d52691b4dbfc